--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,8 @@
 $white: #fff;
 $pink: #f45ea6;
 $orange: #ff5858;
+$lavender: #d59aff;
+$lavender-dark: #7737af;
 
 $font-serif: 'Abril Fatface', serif;
 $font-sans: 'Poppins', sans-serif;
